# blogpost-rs

./: Cargo.toml
examples/: egg.rs  regex.rs  trim.rs
src/: main.rs
